add proc and dependabot